[package]
name = "trap-the-tiger-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bevy = { version = "0.16.0" }
rand = "0.9.2"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
serde = "1.0.219"
serde_json = "1.0.143"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

